# cocoseditor

./: .gitignore  README.md
cocos-java/: CMakeLists.txt
cocos-java/Classes/: AppDelegate.cpp  AppDelegate.h  Function.cpp  Function.h  JavaCallFunc.cpp  JavaCallFunc.h  JavaEngine.cpp  JavaEngine.h  JavaEngineJNI.cpp  JavaEventListener.cpp  JavaEventListener.h  JavaEventListenerAcceleration.cpp  JavaEventListenerAcceleration.h  JavaEventListenerCustom.cpp  JavaEventListenerCustom.h  JavaEventListenerKeyboard.cpp  JavaEventListenerKeyboard.h  JavaEventListenerTouchAllAtOnce.cpp  JavaEventListenerTouchAllAtOnce.h  JavaEventListenerTouchOneByOne.cpp  JavaEventListenerTouchOneByOne.h  JavaGLCanvas.cpp  JavaGLCanvas.h  JavaLayerLoader.cpp  JavaLayerLoader.h  JavaPhysicsContactListener.cpp  JavaPhysicsContactListener.h  JavaStorageClass.cpp  JavaStorageClass.h  JavaWebSocketDelegate.cpp  JavaWebSocketDelegate.h
cocos-java/Classes/cocostudio/: JavaComController.cpp  JavaComController.h  JavaTriggerAction.cpp  JavaTriggerAction.h  JavaTriggerCondition.cpp  JavaTriggerCondition.h
cocos-java/proj.android/: AndroidManifest.xml  pom.xml  project.properties
cocos-java/proj.android/assets/armatures/: Cowboy.xml
cocos-java/proj.android/assets/cocosui/UIEditorTest/UIButton_Editor/: UIButton_Editor_1.xml
cocos-java/proj.android/assets/scenetest/ParticleComponentTest/: ParticleComponentTest.xml
cocos-java/proj.android/assets/scenetest/TriggerTest/: TriggerTest.json  TriggerTest.xml
cocos-java/proj.android/assets/scenetest/UIComponentTest/starMenuButton/: starMenuButton.ExportJson
cocos-java/proj.android/jni/: Android.mk  main.cpp
cocos-java/proj.android/res/drawable-hdpi/.svn/: all-wcprops  entries
cocos-java/proj.android/res/drawable-ldpi/.svn/: all-wcprops  entries
cocos-java/proj.android/res/drawable-mdpi/.svn/: all-wcprops  entries
cocos-java/proj.android/res/drawable-mdpi/.svn/text-base/: icon.png.svn-base
cocos-java/proj.android/res/drawable/.svn/: all-wcprops  entries
cocos-java/proj.android/res/layout/: main.xml
cocos-java/proj.android/res/layout/.svn/: all-wcprops  entries
cocos-java/proj.android/res/values/: strings.xml
cocos-java/proj.android/res/values/.svn/: all-wcprops  entries
cocos-java/proj.android/res/values/.svn/text-base/: strings.xml.svn-base
cocos-java/proj.android/src/org/.svn/: all-wcprops  entries
cocos-java/proj.controller-android/: AndroidManifest.xml
cocos-java/proj.controller-android/res/values/: strings.xml
cocos-java/proj.controller/src/main/assets/layouts/: game.cce  (+5 more)
cocos-java/proj.framework/: pom.xml
cocos-java/proj.ios/cocosjava.xcodeproj/: project.pbxproj
cocos-java/proj.java/: pom.xml
cocos-java/proj.javawt/: pom.xml
cocos-java/proj.mac/cocosjava.xcodeproj/: project.pbxproj
cocos-java/proj.mac/cocosjava.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cocos-java/proj.win32/: cocosjava.vcxproj  cocosjava.vcxproj.filters  cocosjawt.vcxproj  cocosjawt.vcxproj.filters  cocosjvm.aps  cocosjvm.rc  cocosjvm.vcxproj  cocosjvm.vcxproj.filters  java.vcxproj  java.vcxproj.filters  main.cpp  resource.h
cocos-java/proj.win32/java/: main.cpp
(+527 files in other folders)
